primer commit creacion de validaciones

--- a/Aplicaciones/gasto/templates/categoria_form.html
+++ b/Aplicaciones/gasto/templates/categoria_form.html
@@ -107,7 +107,7 @@
       }
     });
     // Para select se usa 'change' en lugar de 'input'
-    if(id === 'estado'){
+    if(id === 'estadoooo'){
       document.getElementById(id).addEventListener('change', function(){
         if(this.value !== ''){
           document.getElementById('error-' + id).style.display = 'none';
