commits de creacion de models

--- a/Aplicaciones/gasto/templates/usuarios_list.html
+++ b/Aplicaciones/gasto/templates/usuarios_list.html
@@ -1,9 +1,9 @@
 {% extends 'plantilla.html' %}
 
-{% block title %}Usuarios{% endblock %}
+{% block title %}Usuario{% endblock %}
 
 {% block content %}
-<h2>Usuarios</h2>
+<h2>Usuario</h2>
 <a href="{% url 'usuario_create' %}"
    style="display:inline-block;
           background-color:#28a745;
