--- a/Aplicaciones/gasto/templates/gastos_list.html
+++ b/Aplicaciones/gasto/templates/gastos_list.html
@@ -16,7 +16,7 @@
           transition: background-color 0.3s ease;"
    onmouseover="this.style.backgroundColor='#1e7e34';"
    onmouseout="this.style.backgroundColor='#28a745';">
-  Crear nuevo gasto
+  Crear nuevo gastosssss
 </a>
 <table id="gastos" class="display">
     <thead>
