commits de configuracion de setting.py

--- a/Aplicaciones/gasto/templates/inicio.html
+++ b/Aplicaciones/gasto/templates/inicio.html
@@ -14,7 +14,7 @@
         <div class="carousel-container">
           <h2>Controla tus gastos en un solo lugar</h2>
           <p>Gestiona y supervisa fácilmente los gastos y reembolsos de tu empresa pequeña con nuestra aplicación intuitiva y eficiente.</p>
-          <a href="{% url 'usuarios_list' %}" class="btn-get-started">Registrar Usuarios</a>
+          <a href="{% url 'usuarios_list' %}" class="btn-get-started">Registrar Usuariiiiiiios</a>
         </div>
       </div><!-- End Carousel Item -->
 
